--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,10 @@ services:
       dockerfile: Dockerfile
     command: ["./master"]
     environment:
-      - REDIS_URL=redis:6379
-      - RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672/
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - RABBITMQ_HOST=rabbitmq
+      - RABBITMQ_PORT=5672
     depends_on:
       - redis
       - rabbitmq
@@ -19,8 +21,10 @@ services:
       dockerfile: Dockerfile
     command: ["./worker"]
     environment:
-      - REDIS_URL=redis:6379
-      - RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672/
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - RABBITMQ_HOST=rabbitmq
+      - RABBITMQ_PORT=5672
     depends_on:
       - redis
       - rabbitmq
